[gd_scene load_steps=13 format=2]

[ext_resource path="res://menus/OptionsMenu.gd" type="Script" id=1]
[ext_resource path="res://menus/Controls/LabeledSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sounds/sfx/Blip_select 25.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/fonts/No Virus.ttf"

[sub_resource type="DynamicFont" id=2]
size = 74
font_data = SubResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 52
font_data = SubResource( 1 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )
Button/fonts/font = SubResource( 2 )
Button/styles/disabled = SubResource( 3 )
Button/styles/focus = SubResource( 4 )
Button/styles/hover = SubResource( 5 )
Button/styles/normal = SubResource( 6 )
Button/styles/pressed = SubResource( 7 )

[node name="OptionsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 9 )
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
z_index = 10

[node name="ColorRect" type="ColorRect" parent="Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
color = Color( 0, 0, 0, 0.792157 )

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 624.5
margin_top = 364.0
margin_right = 1322.5
margin_bottom = 716.0

[node name="MasterVolumeSlider" parent="Node2D/VBoxContainer" instance=ExtResource( 2 )]
margin_right = 698.0
margin_bottom = 62.0
label = "Master Volume:"
value = 100.0

[node name="MusicVolumeSlider" parent="Node2D/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 66.0
margin_right = 698.0
margin_bottom = 128.0
label = "Music Volume:"
value = 100.0

[node name="SfxVolumeSlider" parent="Node2D/VBoxContainer" instance=ExtResource( 2 )]
margin_top = 132.0
margin_right = 698.0
margin_bottom = 194.0
label = "Sfx Volume:"
value = 100.0

[node name="FullScreen" type="HBoxContainer" parent="Node2D/VBoxContainer"]
margin_top = 198.0
margin_right = 698.0
margin_bottom = 260.0

[node name="Label" type="Label" parent="Node2D/VBoxContainer/FullScreen"]
margin_right = 400.0
margin_bottom = 62.0
rect_min_size = Vector2( 400, 0 )
text = "Full Screen:"

[node name="CheckButton" type="CheckButton" parent="Node2D/VBoxContainer/FullScreen"]
margin_left = 404.0
margin_right = 468.0
margin_bottom = 62.0

[node name="BackButton" type="Button" parent="Node2D/VBoxContainer"]
margin_top = 264.0
margin_right = 698.0
margin_bottom = 352.0
text = "Back"

[node name="TestSfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sfx"

[connection signal="value_changed" from="Node2D/VBoxContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="Node2D/VBoxContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="Node2D/VBoxContainer/SfxVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="toggled" from="Node2D/VBoxContainer/FullScreen/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Node2D/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
